[package]
name = "zennet"
version = "0.1.0"
edition = "2021"

# [bin]
# name = "zenbin"
# path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
http = "1.1.0"
http-serde = "2.0.0"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
